fixed css for main-menu overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ General CSS
 
 #content {
 	width: 750px;
-	padding: 140px 0 0 80px;
+	padding: 140px 0 0 180px;
 	margin: 0 auto;
 	z-index: 1;
 }
@@ -337,7 +337,7 @@ Header & Menu CSS
 	height: 100px;
 	width: 100px;
 	background-repeat: no-repeat;
-	margin-left: 91%;
+	margin-left: 100%;
 	margin-top: -45px;
 }
 #social-box {
